--- a/src/views/login.module.css
+++ b/src/views/login.module.css
@@ -1,12 +1,4 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    text-decoration: none;
-    font-family:sans-serif;
-  
-  }
-  
-.zzz {
+.loginbackGround {
     width: 100%;
     height: 100vh;
     background: linear-gradient(100deg, skyblue, rgb(93, 93, 206));
@@ -17,7 +9,7 @@
   .loginForm {
     position:absolute;
     width:400px;
-    height:500px;
+    height:530px;
     padding: 30px, 20px;
     background-color:#FFFFFF;
     text-align:center;
