--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ html {
 }
 body {
     min-height: 100%;
+    background-color:#d0ebff;
+    
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
