--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,11 @@ table {
   font-weight: 200;
   src: url("../src/fonts/NotoSansKR-Regular.otf");
 }
+
 * {
   font-family: "NotoSansKR";
 }
+
+body {
+   background-color:#d0ebff;
+ }
