--- a/src/views/Receipt/style.module.css
+++ b/src/views/Receipt/style.module.css
@@ -127,7 +127,7 @@
 }
 .table-header{
   background-color: #B3BCE3;
-  color: white;
+  color: black;
   text-align: center;
   font-size: 16px;
 }
@@ -137,7 +137,7 @@
 
 }
 .table-body:hover{
-  background-color: #ffa8a8;
+  background-color: #e7f5ff;
 }
 
 /* 2. 진료자 리스트 컴포넌트 */
