--- a/src/views/Receipt/style.module.css
+++ b/src/views/Receipt/style.module.css
@@ -12,7 +12,7 @@
 
 .menu{
   /* padding: 7px; */
-  margin: 2em;
+  margin: 1.2em;
   width: 60%;
   /* background-color: yellow; */
 }
@@ -48,14 +48,14 @@
 /* Left Component */
 .left-component{
   width: 70%;
-  margin-left: 2em;
+  margin-left: 1.2em;
   margin-bottom: 2em;
 
 }
 
 /* 1. 환자 검색 컴포넌트 */
 .left-component-top{
-  margin-bottom: 2em;
+  margin-bottom: 1.2em;
   background-color: red;
 }
 .search{
@@ -82,37 +82,6 @@
   /* background-color: violet; */
   text-align: right;
   margin-left: 4em;
-}
-
-/* 찾기 버튼  */
-.search-btn-1{
-  margin-right: 1em;
-  width: 6em;
-  border-radius: 8px;
-  background-color:#B3BCE3;
-  /* border: none; */
-  color: black;
-  padding: 6px;
-  text-align: center; 
-  text-decoration: none; 
-  display: inline-block;
-  font-size: 15px;  
-  margin-right: 1em;
-}
-
-/* 접수 버튼 */
-.search-btn-2{
-  margin-right: 1em;
-  width: 6em;
-  border-radius: 8px;
-  background-color:#ffa8a8;
-  color: black;
-  padding: 6px;
-  text-align: center; 
-  text-decoration: none; 
-  display: inline-block;
-  font-size: 15px;  
-  margin-right: 1em;
 }
 
 .search-result{
@@ -160,9 +129,9 @@
 /* Right Component */
 .right-component{
   width: 30%;
-  margin-left: 2em;
-  margin-right: 2em;
-  margin-bottom: 2em;
+  margin-left: 1.2em;
+  margin-right: 1.2em;
+  /* margin-bottom: 2em; */
 }
 .patient-detail{
   border: solid 0.7px;
@@ -201,7 +170,15 @@
 }
 .form-btn{
   margin-top: 1.3em;
-  width: 17em;
+  /* width: 17em; */
   /* background-color: red; */
   margin-left: 14em;
+}
+.form-btn-1{
+  width: 7em;
+
+}
+
+Button.custom-btn{
+  width: 6em;
 }
