--- a/src/views/Reservation/style.module.css
+++ b/src/views/Reservation/style.module.css
@@ -25,21 +25,24 @@
 
 .right-component-top{
   margin: 3em;
-  /* background-color: green; */
+  border: solid 0.7px;
+  background-color: #dee2e6;;
 }
 
 .form-subject{
-  padding: 0.5em;
-  font-size: 1.8em;
+  margin-top: 0.5em;
+  margin-left: 0.8em;
+  font-size: 27px; 
   font-weight:bold;
-  /* background-color: yellow; */
-
 }
+
 .reserve-form{
+  background-color: #f8f9fa;
   border: solid 2px;
   padding: 2em;
-
+  margin: 1em;
 }
+
 
 .right-component-bottom{
   margin: 2em;
@@ -47,4 +50,9 @@
   padding: 2em;
 
   /* background-color: yellow; */
+}
+
+Button.custom-btn{
+  /* padding: 1em; */
+  width: 6em;
 }
