--- a/src/views/Reservation/ReserveCalendar/dayz.scss
+++ b/src/views/Reservation/ReserveCalendar/dayz.scss
@@ -235,7 +235,7 @@ $dayz-event-text-colors: (
         @while $span < 7 {
             $span: $span + 1;
             &.span-#{$span} {
-                z-index: 1;
+                // z-index: 1;
                 width: calc(#{$span * 100%} + #{$span * 1px} - 1px);
                 &.is-continued {
                     width: calc(#{$span * 100%} + #{($span * 1px - 2px)-$dayz-event-arrow-width});
