--- a/src/views/Reservation/style.module.css
+++ b/src/views/Reservation/style.module.css
@@ -57,3 +57,9 @@ Button.custom-btn{
   /* padding: 1em; */
   width: 6em;
 }
+
+Button.close-btn{
+  width: 2.3em;
+  height: 2.3em;
+  font-size: 15px;
+}
