--- a/src/views/Receipt/style.module.css
+++ b/src/views/Receipt/style.module.css
@@ -61,7 +61,6 @@
 .search-result{
   background-color:#f8f9fa;
   padding: 1em;
-  /* border: solid 0.7px; */
   border-radius: 5px;
   height: 20em;
 }
@@ -76,6 +75,9 @@
   color: black;
   text-align: center;
   font-size: 16px;
+  /* height: 50px; */
+  align-items: center;
+
 }
 .table-body{
   text-align: center;
