--- a/src/views/Diagnosis/MedicineModal.module.css
+++ b/src/views/Diagnosis/MedicineModal.module.css
@@ -1,15 +1,15 @@
-.medicine {
+/* .medicine {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 10000;
-}
+  z-index: 8000;
+} */
 
 .modal-container {
   position: absolute;
-  width: 55vw;
+  width: 40vw;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
