--- a/src/views/Reservation/ReserveCalendar/dayz.scss
+++ b/src/views/Reservation/ReserveCalendar/dayz.scss
@@ -106,10 +106,14 @@ $dayz-event-text-colors: (
             width: 100%;
             .all-day, .hour {
                 width: 100%;
+                // height: 50%;
+                // background-color: #2b2b2b;
+                // font-size: 5em;
                 flex: 1;
                 display: flex;
                 justify-content: center;
                 flex-direction: column;
+                // text-indent: 8px;
                 text-indent: 8px;
                 text-align: left;
                 border-bottom: 1px solid $dayz-border-color;
@@ -133,6 +137,8 @@ $dayz-event-text-colors: (
         border-right:  1px solid $dayz-border-color;
         border-bottom: 1px solid $dayz-border-color;
         box-sizing: border-box;
+        // background-color: yellow;
+        height: 50em;
 
         .event > * {
             height: 100%;
