--- a/src/views/Diagnosis/Diagnosis.module.css
+++ b/src/views/Diagnosis/Diagnosis.module.css
@@ -1,6 +1,7 @@
 /*------------------공통 컴포넌트 속성------------*/
 .diagnosis-component-background{
-    border: 1px solid black;
+    border-radius: 8px;
+    border: 1px solid gray;
     background-color: white;
 }
 .diagnosis-table-header{
@@ -49,7 +50,7 @@
 
 /*환자 리스트 컴포넌트 크기*/
 .diagnosis-patient-widthAndHeight{  
-    width: 440px;
+    width: 470px;
     height: 450px;
 }
 /*------------------증상 검색 컴포넌트----------------------*/
@@ -69,9 +70,10 @@
 /*--------------------진단 검사 목록 컴포넌트----------------*/
 /*진단 검사 목록 컴포넌트 높이*/
 .diagnosis-checkList-widthAndHeight{  
-    border: 1px solid black;
+    border-radius: 8px;
+    border: 1px solid gray;
     background-color: white;
-    width: 1552px;
+    width: 1160px;
     height: 440px;
 }
 /*진단 검사 목록 컴포넌트 높이*/
@@ -94,12 +96,10 @@
 .diagnosis-checkList-button{ 
     
     margin-top: 20px;
-    margin-left: 1010px;
     margin-bottom: 1%;
 }
 .diagnosis-checkList-button2{ 
     
-    margin-left: 1010px;
     margin-bottom: 1%;
 }  
 
@@ -119,7 +119,7 @@
 }
 /*--------------------증상 및 소견, 환자 검색 컴포넌트----------------*/
 .diagnosis-opinionAndSearch-widthAndHeight{  
-    width: 771px;
+    width: 700px;
     height: 500px;
 }
 .diagnosis-opinionAndSearch-title{
@@ -166,6 +166,7 @@
 }
 .diagnosis-opinionAndSearch-Height{ 
     height: 478px;
+    width: 720px;
     margin-right: 7px;
 }
 /*-------------------환자 검색 컴포넌트---------------------------*/
@@ -181,4 +182,10 @@
 .noneLink{
     color: inherit;
     text-decoration: none !important;
+}
+
+.test1{
+    width: 300px;
+    border: 1px solid black;
+    background-color: white;
 }
