[update] receipt form ui update using material-ui

--- a/src/views/Receipt/style.module.css
+++ b/src/views/Receipt/style.module.css
@@ -26,6 +26,7 @@
 .left-component{
   width: 80em;
   margin-left: 1.2em;
+
 }
 
 /* 1. 환자 검색 컴포넌트 */
@@ -37,7 +38,6 @@
 .search{
   background-color:white;
   padding: 1em;
-  /* border: solid 0.7px; */
   border-radius: 5px;
   border-bottom: none;
 }
@@ -48,7 +48,6 @@
   margin-right: 0.3em;
 }
 .search-input{
-  /* border: solid 0.7px; */
   margin-right: 1em;
   padding-left: 0.5em;
 }
@@ -62,7 +61,7 @@
   background-color:#f8f9fa;
   padding: 1em;
   border-radius: 5px;
-  height: 20em;
+  height: 23em;
 }
 
 
@@ -108,7 +107,8 @@
   background-color: #dee2e6;
   border-radius: 7px;
   padding: 0.1em;
-  height: 74vh;
+  /* height: 74vh; */
+  height: 100%;
 }
 .patient-detail-top{
   margin-top: 0.8em;
@@ -122,7 +122,8 @@
   border-radius: 5px;
   margin: 1.6em;
   padding: 1.3em;
-  height: 58vh;
+  /* height: 58vh; */
+  height: 85%;
   font-size: 13px;
 }
 
@@ -144,10 +145,7 @@
 .form-btn{
   margin-top: 2.3em;
   margin-left: 23em;
-  /* background-color: yellow; */
-
 }
-
 .form-btn-1{
   width: 7em;
 }
