--- a/src/views/Reservation/style.module.css
+++ b/src/views/Reservation/style.module.css
@@ -7,25 +7,23 @@
 .left-component{ 
   /* 달력 큰 테이블 */
   width: 70%;
-  margin-top: 2em;
-  margin-left: 2em;
-  margin-bottom: 2em;
-  /* padding:2em; */
+  margin-top: 1.2em;
+  margin-left: 1.2em;
+  margin-bottom: 1.2em;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 /* Right Component */
 .right-component{
   width: 30%;
-  margin: 2em;
-  /* background-color: blue; */
-  align-items: center;
+  margin: 1.2em;
 }
 
 .right-component-top{
-  margin: 3em;
   border-radius: 7px;
   padding: 0.1em;
-  background-color: #dee2e6;;
+  background-color: #dee2e6;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .form-subject{
@@ -42,16 +40,17 @@
   margin: 1em;
 }
 
-
 .right-component-bottom{
-  margin: 2em;
-  border: solid 2px;
-  padding: 2em;
-  /* background-color: yellow; */
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  /* padding: 2em; */
+  margin-top: 1.2em;
+  border-radius: 7px;
+  padding: 0.1em;
+  background-color: #dee2e6;
+  height: 50vh;
 }
 
 Button.custom-btn{
-  /* padding: 1em; */
   width: 6em;
 }
 
