--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,19 @@ table {
 * {
   font-family: "NotoSansKR";
 }
+
+
+/* 세로축 스크롤바 길이 */
+/* 가로축 스크롤바 길이 */
+/* ::-webkit-scrollbar {
+   width:0px;  
+  
+ } */
+ 
+ /* ::-webkit-scrollbar-track-piece {
+   background-color: white;
+ }
+ ::-webkit-scrollbar-thumb {
+   
+   background-color: gray;
+ } */
