--- a/src/views/Diagnosis/Diagnosis.module.css
+++ b/src/views/Diagnosis/Diagnosis.module.css
@@ -3,27 +3,28 @@
     border-radius: 8px;
     border: 1px solid gray;
     background-color: white;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 .diagnosis-table-header{
-    background-color: #B3BCE3;
+    background-color: #e9ecef;
     text-align: center;
 }
 .diagnosis-table-header2{
-    background-color: #B3BCE3;
+    background-color: #e9ecef;
     text-align: center;
 }
 .diagnosis-table-body{
     text-align: center;
 }
 .diagnosis-table{
+    margin-left: 23px;
     width: 96%;
     border-bottom: 0.5px solid rgb(209, 207, 207);
     
 }
 .diagnosis-table1{
-    /* margin-left: 2.5%;
-    width: 95%; */
-    border-bottom: 0.5px solid rgb(209, 207, 207);
+    
+    width: 97.6%;
     table-layout: fixed;
     text-align:center;
 }
@@ -51,14 +52,14 @@
 /*환자 리스트 컴포넌트 크기*/
 .diagnosis-patient-widthAndHeight{  
     width: 470px;
-    height: 450px;
+    height: 470px;
 }
 /*------------------증상 검색 컴포넌트----------------------*/
 
 /*증상 검색 컴포넌트 크기*/
 .diagnosis-symptom-widthAndHeight{ 
     width: 770px;
-    height: 450px;
+    height: 470px;
     /* width: 30vw;
     height: 100%; */
 }
@@ -75,10 +76,11 @@
     background-color: white;
     width: 1160px;
     height: 440px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 /*진단 검사 목록 컴포넌트 높이*/
 .diagnosis-checkList-Height{ 
-    height: 478px;
+    height: 530px;
     margin-right: 16px;
 }
 /*진단 검사 목록 타이틀 간격*/
@@ -94,12 +96,12 @@
 }  */
 /*진단 검사 목록 버튼 간격 및 크기*/
 .diagnosis-checkList-button{ 
-    
+    margin-right: 0.5%;
     margin-top: 20px;
     margin-bottom: 1%;
 }
 .diagnosis-checkList-button2{ 
-    
+    margin-right: 0.5%;
     margin-bottom: 1%;
 }  
 
@@ -107,10 +109,10 @@
 /*--------------------약품 처방 목록 컴포넌트----------------*/
 .diagnosis-medicine-widthAndHeight{  
     width: 780px;
-    height: 450px;
+    height: 470px;
 }
 .diagnosis-medicine-button{
-    margin-left: 66%;
+    margin-left: 67%;
 }
 .diagnosis-medicine-input{
     margin-right:1%;
@@ -144,11 +146,12 @@
     text-align: center;
 }
 .diagnosis-opinionAndSearch-button{
-    margin-left: 65%;
+    margin-left: 68%;
     margin-right: 6px;
 }
 .diagnosis-opinionAndSearch-buttonFocus:focus{
     background-color: white;
+    color: black;
     border: none;
 }
 .diagnosis-opinionAndSearch-chart{
@@ -165,7 +168,7 @@
     margin-bottom: 53px;
 }
 .diagnosis-opinionAndSearch-Height{ 
-    height: 478px;
+    height: 530px;
     width: 720px;
     margin-right: 7px;
 }
@@ -183,11 +186,53 @@
     color: inherit;
     text-decoration: none !important;
 }
+/*  ---------------------  */
 
-.test1{
-    text-align: center;
+.diagnosis-patient-tb{
+    margin-left: 1.7%;
+    width: 96%;
+    
+    text-align:center;
 }
 
-.test2{
-    margin-right: 10%;
+
+.diagnosis-tbh{
+    margin-left: 1.7%;
+    width: 96.5%;
+    table-layout: fixed;
+    text-align:center;
+}
+.diagnosis-tbb{
+    margin-left: 1%;
+    width: 97.5%;
+    border-bottom: 0.5px solid rgb(209, 207, 207);
+    table-layout: fixed;
+    text-align:center;
+    overflow: auto;
+}
+
+.OpinionAndSearchButton{
+   border-radius:6px; 
+}
+
+.symptomButton{
+    margin-left: 3.5%;
+ }
+ 
+ .modal-medic-width{
+     width: 97.3%;
+ }
+
+ .modal-button{
+    margin-left: 30%;
+}
+
+.moadl-textArea{
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.medicineitemWidth{
+    width: 95%;
 }
