--- a/src/views/Diagnosis/MedicineModal.module.css
+++ b/src/views/Diagnosis/MedicineModal.module.css
@@ -13,6 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .medicine-input {
