--- a/src/views/TestState/teststate.module.css
+++ b/src/views/TestState/teststate.module.css
@@ -1,9 +1,26 @@
+/* 전체 화면크기 */
+/* .whole-frame {
+  height: 100vh;
+} */
+
+
 .teststate-frame {
   margin: 8px 4px;
 }
 
+/* Clock */
+.clock {
+  /* background-color: rgba(201, 203, 207, 0.4); */
+  /* background-color: rgba(231, 245, 255, 0.7); */
+  /* background-color: rgba(248, 240, 252); */
+  background-color: #f3d9fa;
+}
+
+/* testState card */
 .card {
-  height: calc(100vh - 16px);
+  height: calc(100vh - 72px);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  /* box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); */
 }
 
 /* 차트부분 */
@@ -29,4 +46,18 @@
 .checked {
   color: blue;
 }
+
+/* ant-table */
+.ant-th.ant-table-thead{
+  background-color: black;
+}
+
+/* LabTable */
+.lab-th {
+  /* background-color: rgba(201, 203, 207, 0.25); */
+  /* background-color: rgba(231, 245, 255, 0.7); */
+  background-color: rgba(248, 240, 252);
+}
+
+
 
