--- a/src/index.css
+++ b/src/index.css
@@ -50,15 +50,15 @@ table {
 
 /* 세로축 스크롤바 길이 */
 /* 가로축 스크롤바 길이 */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
    width:2px;  
    
- } */
+ } 
  
- /* ::-webkit-scrollbar-track-piece {
+ ::-webkit-scrollbar-track-piece {
    background-color: white;
  }
  ::-webkit-scrollbar-thumb {
    
    background-color: gray;
- } */
+ }
