--- a/src/views/Diagnosis/MedicineModal.module.css
+++ b/src/views/Diagnosis/MedicineModal.module.css
@@ -1,11 +1,11 @@
-/* .medicine {
+.medicine {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 8000;
-} */
+}
 
 .modal-container {
   position: absolute;
