[update] pc화소로 변경

--- a/src/views/Receipt/style.module.css
+++ b/src/views/Receipt/style.module.css
@@ -23,7 +23,7 @@
 
 /* Left Component */
 .left-component{
-  width: 80%;
+  width: 66%;
   margin-left: 1.2em;
 
 }
@@ -60,7 +60,7 @@
   background-color:#f8f9fa;
   padding: 1em;
   border-radius: 5px;
-  height: 29em;
+  height: 22em;
 }
 
 
@@ -95,10 +95,11 @@
 
 /* Right Component */
 .right-component{
-  width: 38%;
+  width: 31%;
   margin-left: 1.2em;
   margin-right: 1.2em;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  height: 90vh;
 }
 
 /* 3. 환자 상세 정보 컴포넌트  */
@@ -106,23 +107,24 @@
   background-color: #dee2e6;
   border-radius: 7px;
   padding: 0.1em;
-  /* height: 74vh; */
-  height: 100%;
+  height: 90vh;
 }
 .patient-detail-top{
   margin-top: 0.8em;
   margin-left: 1em;
-  font-size: 22px; 
-  font-weight:bold;
+  font-size: 24px; 
+  font-weight: bold;
+  margin-bottom: 0.7em;
 }
 .patient-detail-bottom{
   background-color: #f8f9fa;
-  /* border: solid 0.5px; */
   border-radius: 5px;
-  margin: 1.6em;
-  padding: 1.3em;
-  height: 87%;
-  font-size: 13px;
+  margin: 1em;
+  padding: 1.6em;
+  padding-left: 1.7em;
+  height: 86%;
+  /* font-size: 11.3px; */
+  font-size: 11.2px;
 }
 
 .form-span{
@@ -141,8 +143,10 @@
   padding: 1em;
 }
 .form-btn{
-  margin-top: 2.3em;
-  margin-left: 23em;
+  margin-left: 28em;
+  /* background-color: blue; */
+  /* margin: 1em; */
+
 }
 .form-btn-1{
   width: 7em;
