--- a/src/views/Reservation/ReserveCalendar/dayz.scss
+++ b/src/views/Reservation/ReserveCalendar/dayz.scss
@@ -96,6 +96,7 @@ $dayz-event-text-colors: (
             font-size: large;
             font-weight: bold;
             color:#60BD68;
+            margin-left: -14px;
         }
     }
 
@@ -115,7 +116,6 @@ $dayz-event-text-colors: (
             width: 100%;
             .all-day, .hour {
                 width: 100%;
-                // height: 50%;
                 // background-color: #2b2b2b;
                 // font-size: 5em;
                 flex: 1;
@@ -151,7 +151,7 @@ $dayz-event-text-colors: (
         box-sizing: border-box;
 
         // 달력 크기 조정 design ############# 
-        height: 56em;
+        height: 46em;
 
         .event > * {
             height: 100%;
