--- a/src/views/Reservation/style.module.css
+++ b/src/views/Reservation/style.module.css
@@ -1,13 +1,14 @@
 /* Index Component */
 .parent-component{
-  height: 100%;
+  /* height: 100%; */
   padding: 0.2em;
 }
 
 /* Left Component */
 .left-component{ 
   /* 달력 큰 테이블 */
-  width: 82%;
+  width: 80%;
+  height: 55em;
   margin-top: 1.2em;
   margin-left: 1.2em;
   margin-bottom: 1.2em;
@@ -25,8 +26,7 @@
   padding: 0.1em;
   background-color: #dee2e6;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  height: 30em;
-  margin-top: 0.4em;
+  height: 26em;
 }
 
 .form-subject{
@@ -47,11 +47,11 @@
 
 .right-component-bottom{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  margin-top: 1.7em;
+  margin-top: 1.2em;
   border-radius: 7px;
   padding: 0.1em;
   background-color: #dee2e6;
-  height: 30em;
+  height: 27.6em;
 }
 
 Button.custom-btn{
