--- a/src/views/Diagnosis/MedicineModal.module.css
+++ b/src/views/Diagnosis/MedicineModal.module.css
@@ -4,12 +4,12 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 8000;
 }
 
 .modal-container {
   position: absolute;
   width: 40vw;
+  /* height: 50vh; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -37,4 +37,8 @@ Button.medicine-btn {
   background-color: rgba(201, 203, 207, 0.5);
   text-align: center;
   font-weight: bold;
+}
+
+.ant-tbody :global(.ant-table-cell) {
+  text-align: center;
 }
