--- a/src/views/Diagnosis/MedicineModal.module.css
+++ b/src/views/Diagnosis/MedicineModal.module.css
@@ -1,9 +1,10 @@
 .medicine {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 7;
 }
 
 .modal-container {
