--- a/src/views/Manage/Manage.module.css
+++ b/src/views/Manage/Manage.module.css
@@ -250,10 +250,10 @@
 }
 
 .timeInterval{
-    margin-left: 84.2%;
-    margin-bottom: 5%;
-    color: #66d9e8;
-    font-size: 1.5rem;
+    margin-left: 39%;
+    margin-bottom: 8%;
+    color: black;
+    font-size: 2.3rem;
 }
 
 
