--- a/src/views/common/main.scss
+++ b/src/views/common/main.scss
@@ -33,3 +33,14 @@
       width: 100px;
     }
   }
+
+.chatBox {
+  background-color: #a5d8ff;
+  height: 380px;
+}
+
+.inputBox {
+  width: 414px;
+  height: 40px;
+  border: none;
+}
