--- a/src/views/TestState/teststate.module.css
+++ b/src/views/TestState/teststate.module.css
@@ -5,15 +5,12 @@
 
 
 .teststate-frame {
-  margin: 8px 4px;
+  /* margin: 8px 4px; */
 }
 
 /* Clock */
 .clock {
   background-color: rgba(201, 203, 207, 0.3);
-  /* background-color: rgba(231, 245, 255, 0.7); */
-  /* background-color: rgba(248, 240, 252); */
-  /* background-color: #f3d9fa; */
   font-weight: bold;
 }
 
@@ -21,7 +18,6 @@
 .card {
   height: calc(100vh - 72px);
   box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  /* box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); */
 }
 
 /* 차트부분 */
@@ -33,6 +29,7 @@
 
 .teststate-table {
   margin-top: 1rem;
+  width: 100%;
 }
 
 .teststate-lab {
@@ -75,11 +72,16 @@
 
 /* LabTable */
 .lab-th {
-  /* background-color: rgba(201, 203, 207, 0.25); */
-  /* background-color: rgba(231, 245, 255, 0.7); */
-  /* background-color: #f3d9fa; */
   background-color: rgba(201, 203, 207, 0.3);
 }
+
+.flex-width {
+  padding: 8px 4px;
+}
+
+
+
+
 
 
 
