[update] 관리자 검색 추가 및 디자인 보강

--- a/src/views/Diagnosis/Diagnosis.module.css
+++ b/src/views/Diagnosis/Diagnosis.module.css
@@ -265,7 +265,7 @@
 }
 
 .timeInterval{
-    margin-left: 50%;
+    /* margin-left: 1%; */
     color: #212529;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
