[update] fix fixel sms component

--- a/src/views/Reservation/style.module.css
+++ b/src/views/Reservation/style.module.css
@@ -49,6 +49,7 @@
   background-color: #f8f9fa;
   border-radius: 5px;
   padding: 1.2em;
+  padding-top: 0.5em;
   margin: 0.4em;
   height: 37vh;
 }
